--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
     "description": "World's simplest MVC Framework",
     "type": "framework",
     "license": "MIT",
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
+    }
 }
